src/objects/BFM_MIRO_Withhold_Tax__c.object
<CustomObject>
    <fields>
        <fullName>Apply__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Base_Amount__c</fullName>
        <label>Base Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MIRO_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MIRO Header</label>
        <referenceTo>BFM_MIRO_Header__c</referenceTo>
        <relationshipLabel>MIRO Withhold Taxes</relationshipLabel>
        <relationshipName>MIRO_Withhold_Taxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <label>Tax Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Type__c</fullName>
        <label>Tax Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>MIRO Withhold Tax</label>
    <nameField>
        <label>MIRO Withhold Tax Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MIRO Withhold Taxes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>